whoami/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - image: traefik/whoami:v1.10.3
          imagePullPolicy: IfNotPresent
          name: whoami
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: apps
spec:
  selector:
    app: whoami
  type: ClusterIP
  ports:
    - name: http
      port: 80
